Source/WebCore/dom/AbstractEventLoop.h
@@ -34,6 +34,7 @@ class ScriptExecutionContext;
 
 enum class TaskSource : uint8_t {
     IdleTask,
+    Networking,
 };
 
 // https://html.spec.whatwg.org/multipage/webappapis.html#event-loop
